# sentinel-nextgenai-execution-layer

./: .env.example  .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  Sentinel_Deliverable.pptx  blog.md  build_deliverable_ppt.py  docker-compose.yml  extracted.txt  pyproject.toml  redacted.txt  redaction_report.json
.github/workflows/: ci.yml  deploy.yml
.streamlit/: secrets.toml.example
frontend/: Dockerfile  Dockerfile.customer  Dockerfile.officer  app.py  customer.py  officer.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: sentinel.json
src/api/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
src/api/app/: __init__.py  aggregator.py  authenticator.py  db.py  extractor.py  guardrails.py  main.py  metrics.py  models.py  redactor.py  routes.py  schemas.py  scorer.py  storage.py  worker.py
src/api/migrations/: env.py
src/api/migrations/versions/: 0001_init.py  0002_job_metadata_columns.py  0003_add_batch_model.py
tests/: extraction_meta.json  generate_applicants.py  test_authenticator.py  test_classifier.py  test_guardrails.py  test_redactor.py
tests/fixtures/: generate_fixtures.py
